<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_medium"
    style="@style/Widget.KidsPrayer.Card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/prayerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            style="@style/TextAppearance.KidsPrayer.CardTitle"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enableSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_prayer"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/spacing_small"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/adhanSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_adhan"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/spacing_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adhan_volume"
            style="@style/TextAppearance.KidsPrayer.SectionTitle"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/adhanVolumeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            android:stepSize="1.0"
            style="@style/Widget.KidsPrayer.Slider"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_notification"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/spacing_small"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/lockSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_lock_screen"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/spacing_small"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
