<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Notification Time Setting -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_advance_time"
            android:textAppearance="?attr/textAppearanceBody1"/>

        <Spinner
            android:id="@+id/notificationTimeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:entries="@array/notification_times"/>
    </LinearLayout>

    <!-- Calculation Method Setting -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_method"
            android:textAppearance="?attr/textAppearanceBody1"/>

        <Spinner
            android:id="@+id/calculationMethodSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:entries="@array/calculation_methods"/>
    </LinearLayout>

    <!-- Vibration Setting -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/vibrationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/enable_vibration"/>

</LinearLayout>